--- a/archive/Whole_Genome_prior_estimation.ipynb
+++ b/archive/Whole_Genome_prior_estimation.ipynb
@@ -5,159 +5,14 @@
    "metadata": {},
    "source": [
     "# Whole Genome prior estimation\n",
-    "This note book document the steps to generate mixture priors and the analysis of its result"
+    "This note book document the analysis of mixture priors via flashr, UDR and TEEM."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Steps\n",
-    "## Conduct univariate analysis for each genes,for each tissues, using all the SNPs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/AC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename_region_list.txt \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/PCC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename_region_list.txt \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/DLPFC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename_region_list.txt \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/AC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list  ~/sos/fifth/cac_bf \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/PCC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list ~/sos/fifth/cac_bf \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
-    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
-    "  --wd /home/hs3163/Project/Genome_prior/DLPFC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "  --region_list ~/sos/fifth/cac_bf \\\n",
-    "  --region_name 1 \\\n",
-    "  --data_start 2 \\\n",
-    "  --window 500000 \\\n",
-    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "  --job_size 1\\\n",
-    "  -J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/mnt/mfs/statgen/neuro-twas/cac"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compute Mixture prior via flash and then estimate the weights of the prior with UDR and TEEM \n",
+    "##  Mixture prior via flash and then estimate the weights of the prior with UDR and TEEM \n",
     "effect model = exchangable Z score\n",
     "\n",
     "constraint for flash: both postivitiy and non-constraint result are reported.\n",
