--- a/archive/one_gene/Singleton_MvSuSIE_Comparison.ipynb
+++ b/archive/one_gene/Singleton_MvSuSIE_Comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,11 +112,11 @@
     }
    ],
    "source": [
-    "Prior = readRDS(\"~/Project//one_gene/data/GTEx_V8_strong_z.ed_8tissue.rds\")\n",
+    "Prior = readRDS(\"/home//hs3163/Project//one_gene/data/GTEx_V8_strong_z.ed_8tissue.rds\")\n",
     "tissue = Prior$U$Artery_Tibial%>%colnames()\n",
     "mtr = matrix(0, nrow = 8, ncol = 8,dimnames = list(tissue,tissue))\n",
     "mtr[colnames(mtr) == \"Whole_Blood\",colnames(mtr) == \"Whole_Blood\"] = 1\n",
-    "mtr%>%saveRDS(\"~/Project//one_gene/data/GTEx_V8_strong_z.ed_Whole_Blood.rds\")"
+    "mtr%>%saveRDS(\"/home//hs3163//one_gene/data/GTEx_V8_strong_z.ed_Whole_Blood.rds\")"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "for tissue in `echo Whole_Blood`; do\n",
-    "nohup sos run ~/GIT/neuro-twas/workflow/uni_susie.ipynb susie_cv  \\\n",
+    "nohup sos run /home//hs3163/GIT/neuro-twas/workflow/uni_susie.ipynb susie_cv  \\\n",
     "  --molecular-pheno  /home/hs3163/Project/one_gene/GTEx_V8.txt  \\\n",
     "  --wd \"/mnt/mfs/statgen/neuro-twas/JAZF1_uni_non/$tissue/\" \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
@@ -171,7 +171,7 @@
     "--name_prefix \"GTEx_V8\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "--impute TRUE --job_size 1 \\\n",
-    "--mixture_prior ~/Project//one_gene/data/GTEx_V8_strong_z.ed_$tissue.rds \\\n",
+    "--mixture_prior /home//hs3163/Project//one_gene/data/GTEx_V8_strong_z.ed_$tissue.rds \\\n",
     "--cv_times 100 \\\n",
     "--MAF 0 \\\n",
     "--extract_snp \"/mnt/mfs/statgen/neuro-twas/JAZF1_uni_non//Whole_Blood/whole_blood_snps\" \\\n",
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "lm(V1~V2,data = pip )%>%summary"
+    "lm(V1/home//hs3163V2,data = pip )%>%summary"
    ]
   },
   {
@@ -409,7 +409,7 @@
     }
    ],
    "source": [
-    "lm(V1~V2,data = coef )%>%summary"
+    "lm(V1/home//hs3163V2,data = coef )%>%summary"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples = samples%>%mutate(X1 = map_chr(X1,~paste(c(.x,.x),collapse = \":\")))"
+    "samples = samples%>%mutate(X1 = map_chr(X1,/home//hs3163paste(c(.x,.x),collapse = \":\")))"
    ]
   },
   {
@@ -568,7 +568,7 @@
     }
    ],
    "source": [
-    "lm(V1~V2,data = fitted )%>%summary"
+    "lm(V1/home//hs3163V2,data = fitted )%>%summary"
    ]
   },
   {
