--- a/archive/one_gene/JAZF1_FUSION_Analysis.ipynb
+++ b/archive/one_gene/JAZF1_FUSION_Analysis.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
     }
    ],
    "source": [
-    "na.omit(result_real_condense[result_real_condense$TWAS.P < 0.05,])"
+    "na.omit(result_real_condense[result_real_condense$TWAS.P < 0.05/8,])"
    ]
   },
   {
@@ -852,14 +852,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 22 × 6</caption>\n",
+       "<caption>A data.frame: 20 × 6</caption>\n",
        "<thead>\n",
        "\t<tr><th></th><th scope=col>MODELCV.R2</th><th scope=col>MODELCV.PV</th><th scope=col>TWAS.Z</th><th scope=col>TWAS.P</th><th scope=col>sim</th><th scope=col>tissue</th></tr>\n",
        "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
@@ -876,12 +876,10 @@
        "\t<tr><th scope=row>17</th><td>0.190</td><td>3.8e-11</td><td>-6.9224</td><td>4.44e-12</td><td>0.7</td><td>Liver          </td></tr>\n",
        "\t<tr><th scope=row>19</th><td>0.077</td><td>2.5e-13</td><td> 2.7856</td><td>5.34e-03</td><td>0.7</td><td>Whole_Blood    </td></tr>\n",
        "\t<tr><th scope=row>20</th><td>0.074</td><td>2.3e-13</td><td>-2.8395</td><td>4.52e-03</td><td>0.7</td><td>Muscle_Skeletal</td></tr>\n",
-       "\t<tr><th scope=row>22</th><td>0.014</td><td>4.1e-03</td><td>-1.1047</td><td>2.69e-01</td><td>0.7</td><td>Artery_Tibial  </td></tr>\n",
        "\t<tr><th scope=row>NA.2</th><td>   NA</td><td>     NA</td><td>NA     </td><td>      NA</td><td> NA</td><td>NA             </td></tr>\n",
        "\t<tr><th scope=row>25</th><td>0.190</td><td>3.8e-11</td><td>-6.9224</td><td>4.44e-12</td><td>0.8</td><td>Liver          </td></tr>\n",
        "\t<tr><th scope=row>27</th><td>0.077</td><td>2.5e-13</td><td> 2.7856</td><td>5.34e-03</td><td>0.8</td><td>Whole_Blood    </td></tr>\n",
        "\t<tr><th scope=row>28</th><td>0.074</td><td>2.3e-13</td><td>-2.8395</td><td>4.52e-03</td><td>0.8</td><td>Muscle_Skeletal</td></tr>\n",
-       "\t<tr><th scope=row>30</th><td>0.013</td><td>5.9e-03</td><td>-1.3384</td><td>1.81e-01</td><td>0.8</td><td>Artery_Tibial  </td></tr>\n",
        "\t<tr><th scope=row>NA.3</th><td>   NA</td><td>     NA</td><td>NA     </td><td>      NA</td><td> NA</td><td>NA             </td></tr>\n",
        "\t<tr><th scope=row>33</th><td>0.190</td><td>3.8e-11</td><td>-6.9224</td><td>4.44e-12</td><td>0.9</td><td>Liver          </td></tr>\n",
        "\t<tr><th scope=row>35</th><td>0.077</td><td>2.5e-13</td><td> 2.7856</td><td>5.34e-03</td><td>0.9</td><td>Whole_Blood    </td></tr>\n",
@@ -891,7 +889,7 @@
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 22 × 6\n",
+       "A data.frame: 20 × 6\n",
        "\\begin{tabular}{r|llllll}\n",
        "  & MODELCV.R2 & MODELCV.PV & TWAS.Z & TWAS.P & sim & tissue\\\\\n",
        "  & <dbl> & <dbl> & <chr> & <dbl> & <dbl> & <chr>\\\\\n",
@@ -907,12 +905,10 @@
        "\t17 & 0.190 & 3.8e-11 & -6.9224 & 4.44e-12 & 0.7 & Liver          \\\\\n",
        "\t19 & 0.077 & 2.5e-13 &  2.7856 & 5.34e-03 & 0.7 & Whole\\_Blood    \\\\\n",
        "\t20 & 0.074 & 2.3e-13 & -2.8395 & 4.52e-03 & 0.7 & Muscle\\_Skeletal\\\\\n",
-       "\t22 & 0.014 & 4.1e-03 & -1.1047 & 2.69e-01 & 0.7 & Artery\\_Tibial  \\\\\n",
        "\tNA.2 &    NA &      NA & NA      &       NA &  NA & NA             \\\\\n",
        "\t25 & 0.190 & 3.8e-11 & -6.9224 & 4.44e-12 & 0.8 & Liver          \\\\\n",
        "\t27 & 0.077 & 2.5e-13 &  2.7856 & 5.34e-03 & 0.8 & Whole\\_Blood    \\\\\n",
        "\t28 & 0.074 & 2.3e-13 & -2.8395 & 4.52e-03 & 0.8 & Muscle\\_Skeletal\\\\\n",
-       "\t30 & 0.013 & 5.9e-03 & -1.3384 & 1.81e-01 & 0.8 & Artery\\_Tibial  \\\\\n",
        "\tNA.3 &    NA &      NA & NA      &       NA &  NA & NA             \\\\\n",
        "\t33 & 0.190 & 3.8e-11 & -6.9224 & 4.44e-12 & 0.9 & Liver          \\\\\n",
        "\t35 & 0.077 & 2.5e-13 &  2.7856 & 5.34e-03 & 0.9 & Whole\\_Blood    \\\\\n",
@@ -922,7 +918,7 @@
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 22 × 6\n",
+       "A data.frame: 20 × 6\n",
        "\n",
        "| <!--/--> | MODELCV.R2 &lt;dbl&gt; | MODELCV.PV &lt;dbl&gt; | TWAS.Z &lt;chr&gt; | TWAS.P &lt;dbl&gt; | sim &lt;dbl&gt; | tissue &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|---|\n",
@@ -937,12 +933,10 @@
        "| 17 | 0.190 | 3.8e-11 | -6.9224 | 4.44e-12 | 0.7 | Liver           |\n",
        "| 19 | 0.077 | 2.5e-13 |  2.7856 | 5.34e-03 | 0.7 | Whole_Blood     |\n",
        "| 20 | 0.074 | 2.3e-13 | -2.8395 | 4.52e-03 | 0.7 | Muscle_Skeletal |\n",
-       "| 22 | 0.014 | 4.1e-03 | -1.1047 | 2.69e-01 | 0.7 | Artery_Tibial   |\n",
        "| NA.2 |    NA |      NA | NA      |       NA |  NA | NA              |\n",
        "| 25 | 0.190 | 3.8e-11 | -6.9224 | 4.44e-12 | 0.8 | Liver           |\n",
        "| 27 | 0.077 | 2.5e-13 |  2.7856 | 5.34e-03 | 0.8 | Whole_Blood     |\n",
        "| 28 | 0.074 | 2.3e-13 | -2.8395 | 4.52e-03 | 0.8 | Muscle_Skeletal |\n",
-       "| 30 | 0.013 | 5.9e-03 | -1.3384 | 1.81e-01 | 0.8 | Artery_Tibial   |\n",
        "| NA.3 |    NA |      NA | NA      |       NA |  NA | NA              |\n",
        "| 33 | 0.190 | 3.8e-11 | -6.9224 | 4.44e-12 | 0.9 | Liver           |\n",
        "| 35 | 0.077 | 2.5e-13 |  2.7856 | 5.34e-03 | 0.9 | Whole_Blood     |\n",
@@ -963,12 +957,10 @@
        "17   0.190      3.8e-11    -6.9224 4.44e-12 0.7 Liver          \n",
        "19   0.077      2.5e-13     2.7856 5.34e-03 0.7 Whole_Blood    \n",
        "20   0.074      2.3e-13    -2.8395 4.52e-03 0.7 Muscle_Skeletal\n",
-       "22   0.014      4.1e-03    -1.1047 2.69e-01 0.7 Artery_Tibial  \n",
        "NA.2    NA           NA    NA            NA  NA NA             \n",
        "25   0.190      3.8e-11    -6.9224 4.44e-12 0.8 Liver          \n",
        "27   0.077      2.5e-13     2.7856 5.34e-03 0.8 Whole_Blood    \n",
        "28   0.074      2.3e-13    -2.8395 4.52e-03 0.8 Muscle_Skeletal\n",
-       "30   0.013      5.9e-03    -1.3384 1.81e-01 0.8 Artery_Tibial  \n",
        "NA.3    NA           NA    NA            NA  NA NA             \n",
        "33   0.190      3.8e-11    -6.9224 4.44e-12 0.9 Liver          \n",
        "35   0.077      2.5e-13     2.7856 5.34e-03 0.9 Whole_Blood    \n",
@@ -981,7 +973,7 @@
     }
    ],
    "source": [
-    "result_sim_condense[result_sim_condense$TWAS.P < 0.05*8,]"
+    "result_sim_condense[result_sim_condense$TWAS.P < 0.05/8,]"
    ]
   },
   {
