--- a/archive/one_gene/JAZF1_FUSION_Analysis.ipynb
+++ b/archive/one_gene/JAZF1_FUSION_Analysis.ipynb
@@ -785,10 +785,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### Full table for JTI analysis with real similarity"
    ]
@@ -1277,11 +1275,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Discussion\n",
+    "As indicated by fusion and the JTI* analysis, the tissue of muscle skeletal and Liver are TWAS significant for Asthma. This result is anticipated because the JTI algorithm, based on CV performance of grid search combination of hyperparameter,  ultimatily decided to not leverage tissues with similarity less than 1. In our case, make it effectively a single tissue analysis with elastic net.   \n",
+    " \n",
+    "One difference between the FUSION and JTI result is that of the Whole blood, this is because FUSION use top1 instead of enet, and provide different estimated weight and ultimatily impacting the TWAS result. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1499,7 +1500,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.0"
   }
  },
  "nbformat": 4,
