--- a/workflow/GWAS_Gene_annotation.ipynb
+++ b/workflow/GWAS_Gene_annotation.ipynb
@@ -241,12 +241,18 @@
     "    library(\"purrr\")\n",
     "    library(\"tidyr\")\n",
     "    sumstat = read_delim(\"$[_input]\",\"\\t\")\n",
-    "    sumstat_ftr = sumstat%>%filter(CHR == $[_regions[1]], BP >=  $[_regions[2]] - 500000, BP <= $[_regions[2]] + 500000)\n",
+    "    sumstat_ftr = sumstat%>%mutate(Z = sumstat[,$[beta_col]]/sumstat[,$[sbeta_col]])%>%\n",
+    "    filter(CHR == $[_regions[1]], BP >=  $[_regions[2]] - 500000, BP <= $[_regions[2]] + 500000)%>%\n",
+    "    ## remove all the NA,nan,Inf sumstat\n",
+    "    filter(!is.na(Z) && !is.nan(Z) && is.finite(Z))\n",
     "    output = list()\n",
     "    output$bhat = as.matrix(sumstat_ftr[,$[beta_col]])\n",
     "    rownames(output$bhat) = sumstat_ftr[,$[snp_col]]%>%unlist%>%as.character\n",
     "    output$sbhat = as.matrix(sumstat_ftr[,$[se_beta_col]])\n",
     "    rownames(output$sbhat) = sumstat_ftr[,$[snp_col]]%>%unlist%>%as.character\n",
+    "    ## remove all the NA,nan,Inf sumstat\n",
+    "    \n",
+    "  \n",
     "    output%>%saveRDS(\"$[_output]\")"
    ]
   }
