--- a/archive/one_gene/Analysis_one_gene-Copy1.ipynb
+++ b/archive/one_gene/Analysis_one_gene-Copy1.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "dat = readRDS(\"~/Downloads/ENSG00000153814.11.GTEx_V8.rds\")\n",
+    "dat = readRDS(\"~//ENSG00000153814.11.GTEx_V8.rds\")\n",
     "\n",
     "dat$X%>%colnames()\n",
     "\n",
@@ -53,8 +53,8 @@
     "install.packages(\"genio\")\n",
     "library(\"genio\")\n",
     "\n",
-    "output_path_pre = paste(\"/Users/haosun/one_gene/\")\n",
-    "output_path_named = paste(\"/cache/ENSG00000153814.11.GTEx_V8\")\n",
+    "output_path_pre = paste(\"~/Project/one_gene/\")\n",
+    "output_path_named = paste(\"/cache/GTEx_V8.ENSG00000153814.11\")\n",
     "\n",
     "working = tibble(tissue = y)\n",
     "working = working%>%filter(!str_detect(tissue,\"Brain\"))\n",
@@ -4821,6 +4821,112 @@
     "        --cwd /home/hs3163/Project/one_gene/data/ \\\n",
     "        -J 50 -q neurology -c ~/GIT/neuro-twas/code/csg.yml -s build &"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Redo FUSION analysis with Asthma SNPs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create subset genotype\n",
+    "LOG: due to an accident running the following command, the original GTEx_V8.ENSG00000153814"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tissue in `cat ~/Project/one_gene/passed_tissue`; do\n",
+    "cp -r ./one_gene_reanalysis/$tissue/cache ./one_gene/$tissue/\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tissue in `cat ~/Project/one_gene/passed_tissue`; do\n",
+    "cp -r ./one_gene/$tissue ./one_gene_reanalysis/\n",
+    "plink --bfile ./one_gene/$tissue/cache/GTEx_V8.ENSG00000153814 --make-bed --extract ./one_gene/data/Asthma_snps --out ./one_gene_reanalysis/$tissue/cache/GTEx_V8.ENSG00000153814\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Redo the analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tissue in `cat ~/Project/one_gene/passed_tissue`; do\n",
+    "cd $tissue\n",
+    "nohup sos run ~/GIT/neuro-twas/workflow/twas_fusion.ipynb compute_wgt  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/one_gene/GTEx_V8.txt  \\\n",
+    "  --wd /home/hs3163/Project/one_gene_reanalysis/$tissue/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/one_gene/GTEx_V8.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --model bslmm blup lasso top1 enet \\\n",
+    "  --job_size 1 \\\n",
+    "  --asso_mem \"60G\" -s build \\\n",
+    "  -J 6 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml &\n",
+    "cd ..\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for sumstat in `cat ~/Project/one_gene/data/sumstat_list`;do\n",
+    "    mkdir $sumstat\n",
+    "    cd $sumstat\n",
+    "    for tissue in `cat ~/Project/one_gene/passed_tissue`; do\n",
+    "    mkdir $tissue\n",
+    "    cd $tissue\n",
+    "    nohup sos run ~/GIT/neuro-twas/workflow/twas_fusion.ipynb association_test  \\\n",
+    "    --gwas_sumstat /home/hs3163/Project/one_gene/data/$sumstat \\\n",
+    "    --molecular-pheno  /home/hs3163/Project/one_gene/GTEx_V8.txt  \\\n",
+    "    --wd /home/hs3163/Project/one_gene_reanalysis/$sumstat/$tissue/ \\\n",
+    "    --weights_path /home/hs3163/Project/one_gene_reanalysis/$tissue/WEIGHTS \\\n",
+    "    --genotype_list /home/hs3163/Project/one_gene/data/geno_list \\\n",
+    "    --region_list /home/hs3163/Project/one_gene/GTEx_V8.txt \\\n",
+    "    --region_name 1 \\\n",
+    "    --data_start 2 \\\n",
+    "    --window 500000 \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --model bslmm blup lasso top1 enet \\\n",
+    "    --job_size 1  -s build\\\n",
+    "    --max_impute 1 \\\n",
+    "    --asso_mem \"60G\" \\\n",
+    "    -J 6 -q csg -c /home/hs3163/GIT/neuro-twas/code/csg.yml &\n",
+    "    cd .. ;\n",
+    "    done\n",
+    "    cd ..;\n",
+    "    done"
+   ]
   }
  ],
  "metadata": {
@@ -4835,7 +4941,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.0"
   }
  },
  "nbformat": 4,
